test/compile_fail/effect_exception_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.exception.Context;
}
